update to 26.1.2